LPD-96935 Create Content coverage endpoint
